--- a/includes/views/css/global.css
+++ b/includes/views/css/global.css
@@ -83,3 +83,21 @@ div.global-container-button {
   justify-content: space-between;
   align-items: center;
 }
+
+/* error card */
+div.global-error-container {
+  background-color: #fcd7d7; /* แทน bg-red-100 */
+  border-left: 4px solid #ef4444; /* แทน border-l-4 border-red-500 */
+  color: #ef4444; /* แทน text-red-700 */
+  padding: 1rem; /* แทน p-4 */
+  margin-bottom: 1.25rem; /* แทน mb-5 */
+}
+
+/* success card */
+div.global-success-container {
+  background-color: #d1fae5; /* แทน bg-green-100 */
+  border-left: 4px solid #10b981; /* แทน border-l-4 border-green-500 */
+  color: #10b981; /* แทน text-green-700 */
+  padding: 1rem; /* แทน p-4 */
+  margin-bottom: 1.25rem; /* แทน mb-5 */
+}
