--- a/includes/views/css/lestCarouselStyles.css
+++ b/includes/views/css/lestCarouselStyles.css
@@ -43,6 +43,13 @@
   color: white;
 }
 
+/* กำหนดสไตล์ปุ่ม Delete เมื่อถูก disabled */
+.lestCarousel-btn-delete[disabled] {
+  background-color: #ccc;
+  color: #666;
+  cursor: not-allowed;
+}
+
 .lestCarousel-table .data-not-found {
   text-align: center;
   vertical-align: middle;
@@ -122,4 +129,80 @@ div.pagination-total {
   display: flex;
   gap: 1rem;
   align-items: center;
+}
+
+/* modal */
+/* Modal */
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+.modal-content {
+  background-color: #fefefe;
+  margin: auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 50%; /* ปรับความกว้างตามต้องการ */
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  border-radius: 5px;
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  -webkit-transform: translateY(-50%);
+}
+
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.modal button {
+  padding: 10px 20px;
+  margin: 10px 5px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  background-color: #f44336; /* สีปุ่มยืนยัน */
+  color: white;
+}
+
+.modal button:hover {
+  background-color: #d73727;
+}
+
+.modal button.cancel {
+  background-color: #ddd;
+  color: black;
+}
+
+.modal button.cancel:hover {
+  background-color: #ccc;
+}
+
+#carouselDetails p,
+div.modal-content p {
+  font-size: 1.2rem;
+}
+
+#deleteForm {
+  display: flex;
+  justify-content: end;
 }
