--- a/includes/views/css/lestCarouselStyles.css
+++ b/includes/views/css/lestCarouselStyles.css
@@ -31,6 +31,12 @@
   border: none;
   border-radius: 4px;
   cursor: pointer;
+  text-decoration: none;
+}
+
+.lestCarousel-btn-edit:hover,
+.lestCarousel-btn-delete:hover {
+  color: white;
 }
 
 .lestCarousel-btn-edit {
